# not-rsync

./: Cargo.toml  README.md  build.rs  rsync_rust.md
.github/workflows/: rust.yml
logs/: output.txt  remote_server.txt
src/: client.rs  lib.rs  local.rs  remote.rs  server.rs  servicer.rs  sync.rs
src/client/: main.rs  sync.rs
src/client/sync/: mod.rs
src/client/sync/comms/: local.rs  mod.rs  remote.rs
src/proto/: not_rsync.proto  rsync.proto
src/server/: main.rs
tests/: remote_connect.rs
tests/test_files/: base.txt  modified.txt
