[package]
name = "rsync-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.22", features = ["derive"] }
ssh2 = "0.9"
anyhow = "1.0.75"
fast_rsync = "0.2.0"
whoami = "1.4.1"
