[package]
name = "not-rsync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "remote_server"
path = "src/bin/remote_server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.22", features = ["derive"] }
ssh2 = "0.9"
anyhow = "1.0.75"
fast_rsync = "0.2.0"
whoami = "1.4.1"
prost = "0.11"
prost-derive = "0.11"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4.13", features = ["full"] }
bytes = "1.4.0"
test-files = "0.1.0"
assert_cmd = "2.0.12"

[build-dependencies]
prost-build = { version = "0.11" }
